--- a/src/main/frontend/src/index.css
+++ b/src/main/frontend/src/index.css
@@ -1,4 +1,5 @@
 body {
+  padding-top: 40px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -11,3 +12,45 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.header{
+  font-family: "Comic Sans MS", cursive;
+}
+
+.navbar {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(249, 190, 79);
+  justify-content: space-between;
+  align-items: center;
+  height: 50px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  font-family: "Comic Sans MS", cursive;
+}
+
+li{
+  color: white;
+}
+li:hover{
+  color: orangered;
+  text-decoration: underline;
+  text-decoration-color: darkred;
+  transition: .5s;
+  border-radius: 0.5rem;
+}
+
+li:active{
+  background-color: darkred;
+}
+
+ul li {
+  float: left;
+  margin-right: 2rem;
+}
+
+
+
+
