--- a/src/main/frontend/src/index.css
+++ b/src/main/frontend/src/index.css
@@ -1,5 +1,5 @@
 body {
-  padding-top: 40px;
+  padding-top: 50px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -49,6 +49,27 @@ li:active{
 ul li {
   float: left;
   margin-right: 2rem;
+}
+
+.services{
+  height: 50px;
+  background-color: green;
+}
+
+
+.hero{
+  height: 50px;
+  background-color: blue;
+}
+
+.stats{
+  height: 50px;
+  background-color: darkred;
+}
+
+.testimonials{
+ height: 50px;
+  background-color: yellow;
 }
 
 
