--- a/src/main/frontend/src/index.css
+++ b/src/main/frontend/src/index.css
@@ -1,9 +1,7 @@
 body {
   padding-top: 50px;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: Quicksand, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -13,10 +11,6 @@ code {
     monospace;
 }
 
-
-.header{
-  font-family: "Comic Sans MS", cursive;
-}
 
 .navbar {
   display: flex;
@@ -46,33 +40,87 @@ li:hover{
   border-radius: 0.5rem;
 }
 
-
 ul li {
   float: left;
   margin-right: 2rem;
 }
+/*1. Home */
+/*Hero*/
+.hero-container {
+  height: 600px;
+  background-image: url("https://images.unsplash.com/photo-1494205577727-d32e58564756?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  display: flex; /* Flexbox prevents margin collapse */
+  flex-direction: column;
+  overflow: auto;
+  justify-content: center;
+  align-items: center;
 
-.services{
-  height: 50px;
-  background-color: green;
+}
+
+.hero-content{
+  width: 70%;
+  display: block;
+  height:300px;
+  background-color: beige;
+  margin: 0;
+  border-radius: 355px 45px 225px 75px / 15px 225px 15px 255px;
+}
+.hero-title{
+  padding: 10px;
+  justify-content: center;
+  display: flex;
+  font-family:'Quicksand', sans-serif
+}
+
+.hero-description{
+
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  padding: 20px;
+}
+.hero-button{
+  display: flex;
+  justify-content: center;
+  margin:auto;
+  background-color: red !important;
+  border: black solid 2px;
+  font-size: 1rem;
+  padding: 10px 20px;
+  outline: none;
+  letter-spacing: 0.5px;
+  font-family: 'Quicksand', sans-serif;
+  border-radius: 355px 45px 225px 75px / 15px 225px 15px 255px;
+  text-transform: uppercase;
+  white-space: normal;
+  font-weight: bold;
+}
+
+/*Services*/
+
+.services-container{
+  height: 300px;
+  background-color: sandybrown;
+  padding: 1px 0;
 }
 
 
-.hero{
-  height: 50px;
-  background-color: blue;
-}
-
+/*Stats*/
 .stats{
-  height: 50px;
-  background-color: darkred;
+  height: 300px;
+  background-color: beige;
+  padding: 1px 0;
 }
-
+/*Testimonials*/
 .testimonials{
- height: 50px;
-  background-color: yellow;
+ height: 300px;
+  background-color: #D48C61;
+  padding: 1px 0;
 }
 
+.footer{
+  display: flex;
+}
 
 
 
